fix sticky header, overflow will break sticky header

--- a/styles/css/App.scss
+++ b/styles/css/App.scss
@@ -56,9 +56,9 @@ body.dark {
 
 html, body {
   scroll-behavior: smooth;
-  overflow: scroll;
+  //overflow: scroll;
   scrollbar-width: none;
-  overflow-x: hidden;
+  //overflow-x: hidden;
 }
 ::-webkit-scrollbar {
   width: 0px; /* Remove scrollbar space */
@@ -128,7 +128,7 @@ nav {
   display: flex;
   align-items: center;
   justify-content: end;
-  z-index: 10;
+  z-index: 20;
   transition: all 1000ms ease;
   background-color: transparent;
   box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px,
